# srdgame_mmo

./: README  build.sh  configure.ac  configure.ac__  configure.scan  del_make.sh
doc/: coding_style  copyright  design_game_system  inter_protocol
plan/: game_design  short_plan  todo
src/: Makefile.am
src/common/: nobject.h  position.h
src/login/: Makefile.am  accountmgr.cpp  accountmgr.h  intersocket.cpp  intersocket.h  login.conf  loginauth.cpp  loginauth.h  loginmgr.cpp  loginmgr.h  loginserver.cpp  loginserver.h  loginsocket.cpp  loginsocket.h  loginsocketbase.cpp  loginsocketbase.h  loginsocketr.cpp  loginsocketr.h  loginsocketw.cpp  loginsocketw.h  loginworker.cpp  loginworker.h  main.cpp  realmmgr.cpp  realmmgr.h  realmserver.cpp  realmsocket.cpp  realmsocketl.h  realmsocketw.cpp  realmsocketw.h  realmworker.cpp  realmworker.h  security.cpp  security.h  userinfo.cpp  userinfo.h
src/login/sample/: ro_db.conf  rosql.cpp  rosql.h  rouser.h
src/realm/: .realmserver.h.swp  Makefile.am  charmgr.cpp  charmgr.h  data  intersocket.cpp  loginauth.cpp  loginauth.h  loginserver.h  main.cpp  realm.conf  realmmanager.h  realmmgr.cpp  realmmgr.h  realmserver.cpp  realmserver.h  realmsocket.cpp  realmsocket.h  realmsocketbase.cpp  realmsocketbase.h  realmsocketl.cpp  realmsocketw.cpp  realmsocketw.h  realmworker.cpp  realmworker.h  ro.conf
src/sample/: '  Makefile.am  char.cpp  char.h  crypto.cpp  crypto.h  defs.h  dispatch.h  fromdispatch.cpp  fromdispatch.h  login.cpp  login.h  main.cpp  map.cpp  map.h  map_main.h  packetdb.cpp  packetdb.h  ro_defs.h  share.cpp  share.h  strlib.cpp  strlib.h  todispatch.cpp  todispatch.h  typedefs.h
src/sample/data/: job_name.conf  spawn.conf
src/sample/data/conf/: char_default.txt
src/sample/data/mob/: poring.mob
src/sample/data/npc/: sun.npc  test.npc
src/shared/: Makefile.am
src/shared/config/: Makefile.am  config.cpp  config.h  configfile.cpp  configfile.h
src/shared/config/.deps/: config.Po
src/shared/crypto/: Makefile.am
src/shared/crypto/aes/: Makefile.am
src/shared/crypto/aes/.deps/: Rijndael.Tpo
src/shared/crypto/md5/: Makefile.am
src/shared/crypto/md5/.deps/: md5c.Po  md5class.Po
src/shared/crypto/sha/: CSHADigest.cpp  CSHADigest.h  Makefile.am
src/shared/crypto/sha/.deps/: CSHADigest.Po
src/shared/database/: Makefile.am  database.cpp  database.h  databasemgr.cpp  databasemgr.h  dbconn.h  dbconnection.h  dbmanager.h  field.h  mysqldatabase.cpp  mysqldatabase.h  queryresult.h
src/shared/database/.deps/: database.Po
src/shared/game/: Makefile.am  attribute.h  auction.h  charinfo.h  charobject.h  email.h  family.h  friend.h  gamedefs.h  info.h  iteminfo.h  itemobject.h  nobject.h  npcinfo.h  npcobject.h  object.h  party.h  position.h  quest.h  skill.h  spawn.h  unit.h  updater.h  userinfo.h  waitor.h
src/shared/log/: Makefile.am  README  log.cpp  log.h  logfile.cpp  logfile.h  loggui.h  test.cpp
src/shared/log/.deps/: log.Po
src/shared/network/: Makefile.am  bipbuffer.h  listensocket.h  network.h  networkconfig.h  socket.cpp  socket.h  socketdefs.h  socketfun.h  socketgc.cpp  socketgc.h  socketmanager.cpp  socketmanager.h  socketmgr.cpp  socketmgr.h  socketworker.cpp  socketworker.h  tcplistensocket.cpp  tcplistensocket.h  tcpsocket.cpp  tcpsocket.h
src/shared/network/.deps/: socketmanager.Po  socketworker.Po  tcpsocket.Po
src/shared/network_et/: Makefile.am  bipbuffer.h  listensocket_Linux.h  network.h  socket.cpp  socket.h  socket_Linux.cpp  socketdefs.h  socketmgr_Linux.cpp  socketmgr_Linux.h  socketops.h  socketops_Linux.cpp
src/shared/network_et/.deps/: socket.Tpo
src/shared/packet/: Makefile.am  opcode.h  packetdefs.h  packetdump.cpp  packetdump.h  packetparser.cpp  packetparser.h
src/shared/sample/: Makefile.am  itemdefs.h  itemhelper.h  ro.conf  ro.h  ro_defs.h  rocharinfo.h  roconf.cpp  roconf.h  roitemdb.cpp  roitemdb.h  rojob.cpp  rojob.h  romap.cpp  romap.h  romob.h  romobinfo.h  ronpcinfo.h  rosql.cpp  rosql.h  rounitstatus.h  strlib.cpp  strlib.h
src/shared/script/: Makefile.am
src/shared/thread/: Makefile.am  autolock.h  condition.h  fastqueue.h  mutex.cpp  mutex.h  rwlock.h  singleton.h  threadbase.h  threadcontroller.cpp  threadcontroller.h  threadctl.cpp  threadctl.h  threadpool.cpp  threadpool.h
src/shared/thread/.deps/: mutex.Po  threadcontroller.Po  threadpool.Po
src/shared/util/: .bufferbase.h.swp  bufferbase.h  conversion_cast.h  delegate.h  dispatch.h  final.h  metadefs.h  singleton.h  syscfg.h  test_delegate.cpp  timedefs.h  typedefs.h
src/world/: Makefile.am  command.cpp  command.h  gmsg.cpp  gmsg.h  intersocket.cpp  intersocket.h  main.cpp  map.cpp  map.h  mapconf.cpp  mapconf.h  mapmgr.cpp  mapmgr.h  mob.cpp  mob.h  mobobject.cpp  mobobject.h  npc.cpp  npc.h  npcid.cpp  npcid.h  npcobject.cpp  npcobject.h  player.cpp  player.h  playerobject.cpp  playerobject.h  rounit.cpp  rounit.h  spawner.cpp  spawner.h  spawnermgr.cpp  spawnermgr.h  unitmgr.cpp  unitmgr.h  world.conf  worldauth.cpp  worldauth.h  worldmgr.cpp  (+11 more)
