AUTOMAKE_OPTION=foreign

INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir) -I$(srcdir)/../shared/packet -I$(srcdir)/../shared/util -I$(srcdir)/../shared/crypto

lib_LTLIBRARIES = libsample.la

libsample_la_SOURCES = defs.h \
					   login.h \
					   login.cpp \
					   char.h \
					   char.cpp \
					   strlib.h \
					   strlib.cpp \
					   crypto.h \
					   crypto.cpp \
					   main.cpp


