AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../thread -I$(srcdir)/../log -I$(srcdir)/../config

noinst_LIBRARIES = libdatabase.a

libdatabase_a_SOURCES = database.h \
			dbconn.h \
			databasemgr.h \
			field.h \
			mysqldatabase.h \
			queryresult.h \
			database.cpp \
			mysqldatabase.cpp \
			databasemgr.cpp
