AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../thread -I$(srcdir)/../log -I$(srcdir)/../config

noinst_LIBRARIES = libdatabase.a

libdatabase_a_SOURCES = database.h \
			database.cpp \
			dbconn.h \
			field.h \
			queryresult.h \
			mysqldatabase.h \
			mysqldatabase.cpp \
			databasemgr.h \
			databasemgr.cpp
