INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../thread

noinst_LIBRARIES = libgame.a

libgame_a_SOURCES = auction.h \
					email.h \
					friend.h \
					iteminfo.h \
					userinfo.h \
					charinfo.h \
					npcinfo.h \
					waitor.h \
					updater.h \
					object.h \
					position.h \
					skill.h \
					family.h \
					gamedefs.h \
					party.h \
					quest.h \
					unit.h
