AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../thread -I$(srcdir)/../log

noinst_LIBRARIES = libnetwork.a

libnetwork_a_SOURCES = network.h\
		       bipbuffer.h \
		       socket.h \
		       socket.cpp \
		       socketdefs.h \
		       tcpsocket.h \
		       socketworker.h \
		       socketmgr.h \
		       socketfun.h \
		   tcpsocket.cpp \
		   socketworker.cpp \
		   socketmgr.cpp \
		   tcplistensocket.h 
