INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../thread -I$(srcdir)/../../login -I$(srcdir)/../../sample -I$(srcdir)/../packet -I$(srcdir)/../database -I$(srcdir)/../log

noinst_LIBRARIES = libsample.a

libsample_a_SOURCES = rouser.h \
				   rosql.h \
				   rosql.cpp

